   * Many more operators (e.g., `**`, `//`, `not`, `in`) can be used
     as first-class functions
   * The semantics of binary operators when applied to fewer or more
     than two arguments have been made more logical
   * `(** a b c d)` is now equivalent to `(** a (** b (** c d)))`,
     not `(** (** (** a b) c) d)`
   * `setv` always returns None
   * xor: If exactly one argument is true, return it
   * hy.core.reserved is now hy.extra.reserved

   [ Bug Fixes ]
   * All shadowed operators have the same arities as real operators
   * Shadowed comparison operators now use `and` instead of `&`
     for chained comparisons
   * partition no longer prematurely exhausts input iterators
   * read and read-str no longer raise an error when the input
     parses to a false value (e.g., the empty string)
   * A `yield` inside of a `with` statement will properly suppress implicit
     returns.
   * `setv` no longer unnecessarily tries to get attributes
   * `loop` no longer replaces string literals equal to "recur"
   * The REPL now prints the correct value of `do` and `try` forms
   * Fixed a crash when tokenizing a single quote followed by whitespace

   [ Misc. Improvements ]
   * New contrib module `hy-repr`
   * Added a command-line option --repl-output-fn

Changes from 0.12.0

   [ Bug Fixes ]
   * Allow installation without Git

Changes from 0.11.0

This release brings some quite significant changes on the language and as a
result very large portions of previously written Hy programs will require
changes. At the same time, documentation and error messages were improved,
hopefully making the language easier to use.

   [ Language Changes ]
   * New syntax for let, with and defclass
   * defmacro will raise an error on &kwonly, &kwargs and &key arguments
   * Keyword argument labels to functions are required to be strings
   * slice replaced with cut to stop overloading the python built-in
   * removed reduntant throw, catch, progn, defun, lisp-if, lisp-if-not,